Added additional slide content to the deck and started stubbing out file names for screen captures that can be used during the presentation.  Will need to create annotated screen shots.

--- a/index.html
+++ b/index.html
@@ -61,24 +61,137 @@
 						<ul>
 							<li>Remember that we need to wait for everyone to login.</li>
 							<li>Ask everyone for a visual cue to let us know once they are logged in.</li>
-							<li></li>
-							<li></li>
+							<li>Once everyone is logged in, we'll ask them to do their first activity.</li>
+							<li>First activity will be to ask them to identify which assessments are not currently visible in the dashboard.</li>
+							<li>We will also want to mention that there is other content that is not visible that would make all the assessments available should any of them want to pilot content with us.</li>
 						</ul>
 					</aside>
 				</section>
 
 				<section>
-					<h3 style="margin-top: -25%;">Standards</h3><br><br>
-					<ul>
-						<li class="fragment step-fade-in-then-out">Plan and employ effective research strategies to locate information and other resources for their intellectual or creative pursuits</li>
-						<li class="fragment step-fade-in-then-out">Evaluate the accuracy, perspective, credibility, and relevance of information, media, data, or other resources</li>
-						<li class="fragment step-fade-in-then-out">Collect data or identify relevant data sets, use digital tools to analyze them, and represent data in various ways to facilitate problem-solving and decision-making</li>
-						<li class="fragment step-fade-in-then-out">Use collaborative technologies to work with others, including peers, experts, or community members, to examine issues and problems from multiple viewpoints</li>
-						<li class="fragment step-fade-in-then-out"></li>
-						<li class="fragment step-fade-in-then-out"></li>
-						<li class="fragment step-fade-in-then-out"></li>
-					</ul>
+					<section>
+						<h3 style="margin-top: -25%;">Standards</h3><br/><br/>
+						<ul>
+							<li class="fragment step-fade-in-then-out">Plan and employ effective research strategies to locate information and other resources for their intellectual or creative pursuits</li>
+							<li class="fragment step-fade-in-then-out">Evaluate the accuracy, perspective, credibility, and relevance of information, media, data, or other resources</li>
+							<li class="fragment step-fade-in-then-out">Collect data or identify relevant data sets, use digital tools to analyze them, and represent data in various ways to facilitate problem-solving and decision-making</li>
+							<li class="fragment step-fade-in-then-out">Use collaborative technologies to work with others, including peers, experts, or community members, to examine issues and problems from multiple viewpoints</li>
+							<li class="fragment step-fade-in-then-out">Build knowledge by actively exploring real-world issues and problems, developing ideas and theories and pursuing answers and solutions</li>
+							<li class="fragment step-fade-in-then-out">Curate information from digital resources using a variety of tools and methods to create collections of artifacts that demonstrate meaningful connections or conclusions</li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ul>
+						</aside>	
+					</section>
+
+					<section>
+						<h3>Learning Objectives</h3><br/>
+						<ul>
+							<!-- This first one gets taken care of by the intial learning activity. -->
+							<li>Identify available data and tools in the dashboard</li>
+							<!-- Need to make sure everyone knows where to find the help videos, the pop-ups, and the support portal. -->
+							<li>Locate help within the dashboard and from our office</li>
+							<!-- This can be the pair share activity (e.g., now turn to your shoulder partner and explain to them...) -->
+							<li>Compare the ways that the student view and full academic year filters affect assessment results</li>
+							<!-- This can be done in the larger group of 5-6 staff. -->
+							<li>Create student groups to track and monitor progress of select students</li>
+							<!-- This would also be part of the larger group activity -->
+							<li>Share student groups with colleagues for collaborative planning</li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ul>
+						</aside>	
+					</section>
+
+					<section>
+						<h3>Assessment Criteria</h3><br/>
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ul>
+						</aside>	
+					</section>
+
 				</section>
+
+				<section data-autoslide="2500">
+					<h3>Finding Help</h3>
+				</section>
+
+				<section>
+					
+					<section>
+						<h3>Our Support Portal</h3><br/>
+						<ul>
+							<li>In a new browser window - or tab - go to:</li>
+							<li><a href="https://bit.ly/2NTj04d" target="_blank">https://bit.ly/2NTj04d</a></li>
+							<li>Login using Google</li>
+							<li>Click on the box titled "Data Central"</li>
+							<li>Click on any of the four request type options.</li>
+							<li>Fill out and complete a request.</li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li>Request training in your building has 7 fields, but if you want us to train you and/or your team we are more than happy to do so.</li>
+								<li>Report a bug has two fields and you can use it if there is ever a discrepancy that you see with the data in the system</li>
+								<li>Help me has three fields and lets us know you need help doing something by some point in time</li>
+								<li>Suggest Improvement has only two fields that are both questions for you to answer.</li>
+								<li>We'll know when a request is submitted because we get emails.</li>
+								<li></li>
+							</ul>
+						</aside>	
+					</section>
+
+					<section>
+						<h3>In Dashboard Content</h3>
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ul>
+						</aside>	
+					</section>
+
+					<section>
+						<h3>On Our YouTube Channel</h3>
+						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp1.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp2.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp3.png" style="width: 100%;">
+						<aside class="notes">
+							<ul>
+								<li>Click on the Waffle Icon in the top right hand corner.</li>
+								<li>Click on FCPS Help</li>
+								<li>Click on any of the videos there to expand and watch the video</li>
+							</ul>
+						</aside>	
+					</section>
+
+
+				</section>
+
 
 				<!-- This is the template for an individual slide that just has bullet points on it. -->
 				<section>
