Added annotated screen shots and first activity for the PD.

--- a/index.html
+++ b/index.html
@@ -53,30 +53,15 @@
 					<h4>Office of Grants, Research, Accountability, &amp; Data</h4>
 				</section>
 
-				<!-- First thing we want them to do is login to the dashboard.  -->
-				<section>
-					<h2>Login here:</h2>
-					<h2><a href="https://data.fcps.net" target="_blank">https://data.fcps.net</a></h2>
-					<aside class="notes">
-						<ul>
-							<li>Remember that we need to wait for everyone to login.</li>
-							<li>Ask everyone for a visual cue to let us know once they are logged in.</li>
-							<li>Once everyone is logged in, we'll ask them to do their first activity.</li>
-							<li>First activity will be to ask them to identify which assessments are not currently visible in the dashboard.</li>
-							<li>We will also want to mention that there is other content that is not visible that would make all the assessments available should any of them want to pilot content with us.</li>
-						</ul>
-					</aside>
-				</section>
-
 				<section>
 					<section>
 						<h3 style="margin-top: -25%;">Standards</h3><br/><br/>
 						<ul>
-							<li class="fragment step-fade-in-then-out">Plan and employ effective research strategies to locate information and other resources for their intellectual or creative pursuits</li>
-							<li class="fragment step-fade-in-then-out">Evaluate the accuracy, perspective, credibility, and relevance of information, media, data, or other resources</li>
-							<li class="fragment step-fade-in-then-out">Collect data or identify relevant data sets, use digital tools to analyze them, and represent data in various ways to facilitate problem-solving and decision-making</li>
-							<li class="fragment step-fade-in-then-out">Use collaborative technologies to work with others, including peers, experts, or community members, to examine issues and problems from multiple viewpoints</li>
-							<li class="fragment step-fade-in-then-out">Build knowledge by actively exploring real-world issues and problems, developing ideas and theories and pursuing answers and solutions</li>
+							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Plan and employ effective research strategies to locate information and other resources for their intellectual or creative pursuits</li>
+							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Evaluate the accuracy, perspective, credibility, and relevance of information, media, data, or other resources</li>
+							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Collect data or identify relevant data sets, use digital tools to analyze them, and represent data in various ways to facilitate problem-solving and decision-making</li>
+							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Use collaborative technologies to work with others, including peers, experts, or community members, to examine issues and problems from multiple viewpoints</li>
+							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Build knowledge by actively exploring real-world issues and problems, developing ideas and theories and pursuing answers and solutions</li>
 							<li class="fragment step-fade-in-then-out">Curate information from digital resources using a variety of tools and methods to create collections of artifacts that demonstrate meaningful connections or conclusions</li>
 						</ul>
 						<aside class="notes">
@@ -93,32 +78,16 @@
 					<section>
 						<h3>Learning Objectives</h3><br/>
 						<ul>
-							<!-- This first one gets taken care of by the intial learning activity. -->
-							<li>Identify available data and tools in the dashboard</li>
+							<!-- Address one of the issues from the NTI sessions. -->
+							<li>Define what the dashboard is and can do</li>
 							<!-- Need to make sure everyone knows where to find the help videos, the pop-ups, and the support portal. -->
 							<li>Locate help within the dashboard and from our office</li>
+							<!-- This first one gets taken care of by the intial learning activity. -->
+							<li>Identify available data and tools in the dashboard</li>
 							<!-- This can be the pair share activity (e.g., now turn to your shoulder partner and explain to them...) -->
-							<li>Compare the ways that the student view and full academic year filters affect assessment results</li>
+							<li>Compare how filters affect dashboard content</li>
 							<!-- This can be done in the larger group of 5-6 staff. -->
-							<li>Create student groups to track and monitor progress of select students</li>
-							<!-- This would also be part of the larger group activity -->
-							<li>Share student groups with colleagues for collaborative planning</li>
-						</ul>
-						<aside class="notes">
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-						</aside>	
-					</section>
-
-					<section>
-						<h3>Assessment Criteria</h3><br/>
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Create and share student groups</li>
 						</ul>
 						<aside class="notes">
 							<ul>
@@ -131,7 +100,73 @@
 
 				</section>
 
-				<section data-autoslide="2500">
+				<section data-autoslide="5000">
+					<h2>What is the dashboard?</h2>
+				</section>
+
+				<section>
+
+					<section>
+						<ul>
+							<li>What do you imagine when you think of a dashboard?</li>
+							<li class="fragment">What type of information can you get from your dashboard?</li>
+							<li class="fragment">How often is the information in your dashboard updated?</li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li>We need to give them a bit of time to think about a response, but then should start cold calling</li>
+								<li>The goal in the first question is to get them to think about a car dashboard.</li>
+								<li>Information in a car dashboard might be:</li> 
+								<ul> 
+									<li>Speed</li> 
+									<li>Total miles traveled</li>
+									<li>Miles traveled on a trip</li>
+									<li>Amount of gas available</li> 
+									<li>oil pressure</li> 
+									<li>Battery charge</li> 
+									<li>Whether or not hi-beams are on</li> 
+									<li>Turn signal usage</li> 
+								</ul>	
+								<li>Information in a car dashboard is updated in real time, but also includes some historical data (e.g., total miles traveled, etc...).</li>
+								<li>This is our way of involving everyone in some question and answering</li>
+							</ul>
+						</aside>	
+					</section>
+
+					<section>
+						<h3>What is the data dashboard?</h3>
+						<ul>
+							<li>Integrates data from Infinite Campus, MUNIS, and more...</li>
+							<li class="fragment" data-autoslide="3500">The data are all updated nightly</li>
+							<li class="fragment" data-autoslide="3500">In addition to current data, historical data is also available</li>
+							<li class="fragment">Gives you the tools you need to analyze student data</li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li>Next, we'll show you how to access your data using the dashboard.</li>
+								<li>Integrates data from across the district.</li>
+								<li>All assessments are available in the data warehouse, but not all are available in the dashboard currently.</li>
+							</ul>
+						</aside>	
+					</section>
+				</section>
+
+				<section data-autoslide="3500">
+					<h2>Getting to your data</h2>
+				</section>
+
+				<!-- First thing we want them to do is login to the dashboard.  -->
+				<section>
+					<h2>Login here: <a href="https://data.fcps.net" target="_blank">https://data.fcps.net</a></h2>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/isqkpNzqqGg?autoplay=1&enablejsapi=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<aside class="notes">
+						<ul>
+							<li>The video should autoplay, and if not 
+						</ul>
+					</aside>
+				</section>
+
+				<section data-autoslide="3500">
 					<h3>Finding Help</h3>
 				</section>
 
@@ -160,26 +195,12 @@
 					</section>
 
 					<section>
-						<h3>In Dashboard Content</h3>
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-						<aside class="notes">
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-						</aside>	
-					</section>
-
-					<section>
-						<h3>On Our YouTube Channel</h3>
+						<h3 style="margin-top: -25%;">In Dashboard Content</h3>
 						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp1.png" style="width: 100%;">
 						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp2.png" style="width: 100%;">
 						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp3.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp4.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp5.png" style="width: 100%;">
 						<aside class="notes">
 							<ul>
 								<li>Click on the Waffle Icon in the top right hand corner.</li>
@@ -187,6 +208,17 @@
 								<li>Click on any of the videos there to expand and watch the video</li>
 							</ul>
 						</aside>	
+					</section>
+
+
+					<section>
+						<h3 style="margin-top: -35%;">Embedded with Dashboard</h3>
+						<img class="fragment step-fade-in-then-out" src="img/embeddedHelp1.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/embeddedHelp2.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/embeddedHelp3.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/embeddedHelp4.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/embeddedHelp5.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/embeddedHelp6.png" style="width: 100%;">
 					</section>
 
 
@@ -299,6 +331,7 @@
 				defaultTiming: 180,
 				transitionSpeed: 'slow',
 				viewDistance: 7,
+				hash: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
