Removed slide with learning standards and included the learning standards as speaker notes on the slide with the learning objectives.

--- a/index.html
+++ b/index.html
@@ -54,50 +54,29 @@
 				</section>
 
 				<section>
-					<section>
-						<h3 style="margin-top: -25%;">Standards</h3><br/><br/>
+					<h3>Learning Objectives</h3><br/>
+					<ul>
+						<!-- Address one of the issues from the NTI sessions. -->
+						<li>Define what the dashboard is and can do</li>
+						<!-- Need to make sure everyone knows where to find the help videos, the pop-ups, and the support portal. -->
+						<li>Locate help within the dashboard and from our office</li>
+						<!-- This first one gets taken care of by the intial learning activity. -->
+						<li>Identify available data and tools in the dashboard</li>
+						<!-- This can be the pair share activity (e.g., now turn to your shoulder partner and explain to them...) -->
+						<li>Compare how filters affect dashboard content</li>
+						<!-- This can be done in the larger group of 5-6 staff. -->
+						<li>Create and share student groups</li>
+					</ul>
+					<aside class="notes">
 						<ul>
-							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Plan and employ effective research strategies to locate information and other resources for their intellectual or creative pursuits</li>
-							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Evaluate the accuracy, perspective, credibility, and relevance of information, media, data, or other resources</li>
-							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Collect data or identify relevant data sets, use digital tools to analyze them, and represent data in various ways to facilitate problem-solving and decision-making</li>
-							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Use collaborative technologies to work with others, including peers, experts, or community members, to examine issues and problems from multiple viewpoints</li>
-							<li class="fragment step-fade-in-then-out" data-autoslide="7500">Build knowledge by actively exploring real-world issues and problems, developing ideas and theories and pursuing answers and solutions</li>
-							<li class="fragment step-fade-in-then-out">Curate information from digital resources using a variety of tools and methods to create collections of artifacts that demonstrate meaningful connections or conclusions</li>
+							<li>Plan and employ effective research strategies to locate information and other resources for their intellectual or creative pursuits</li>
+							<li>Evaluate the accuracy, perspective, credibility, and relevance of information, media, data, or other resources</li>
+							<li>Collect data or identify relevant data sets, use digital tools to analyze them, and represent data in various ways to facilitate problem-solving and decision-making</li>
+							<li>Use collaborative technologies to work with others, including peers, experts, or community members, to examine issues and problems from multiple viewpoints</li>
+							<li>Build knowledge by actively exploring real-world issues and problems, developing ideas and theories and pursuing answers and solutions</li>
+							<li>Curate information from digital resources using a variety of tools and methods to create collections of artifacts that demonstrate meaningful connections or conclusions</li>
 						</ul>
-						<aside class="notes">
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-						</aside>	
-					</section>
-
-					<section>
-						<h3>Learning Objectives</h3><br/>
-						<ul>
-							<!-- Address one of the issues from the NTI sessions. -->
-							<li>Define what the dashboard is and can do</li>
-							<!-- Need to make sure everyone knows where to find the help videos, the pop-ups, and the support portal. -->
-							<li>Locate help within the dashboard and from our office</li>
-							<!-- This first one gets taken care of by the intial learning activity. -->
-							<li>Identify available data and tools in the dashboard</li>
-							<!-- This can be the pair share activity (e.g., now turn to your shoulder partner and explain to them...) -->
-							<li>Compare how filters affect dashboard content</li>
-							<!-- This can be done in the larger group of 5-6 staff. -->
-							<li>Create and share student groups</li>
-						</ul>
-						<aside class="notes">
-							<ul>
-								<li></li>
-								<li></li>
-								<li></li>
-							</ul>
-						</aside>	
-					</section>
-
+					</aside>	
 				</section>
 
 				<section data-autoslide="5000">
