Updated recap portion of slide deck.

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 	</section>
 
                 	<section>
-                		<h3></h3>
+                		<h3>Takeaways</h3>
                 		<ul>
                 			<li></li>
                 			<li></li>
@@ -432,27 +432,6 @@
 	                		</ul>            			
                 		</aside>
                 	</section>
-
-                	<section>
-                		<h3></h3>
-                		<ul>
-                			<li></li>
-                			<li></li>
-                			<li></li>
-                		</ul>
-                		<aside class="notes">
-	                		<ul>
-	                			<li></li>
-	                			<li></li>
-	                			<li></li>
-	                		</ul>            			
-                		</aside>
-                	</section>
-
-                </section>
-
-                
-					
 
 				<!-- This is the end of the vertical section. -->
 				</section>
