Modified the iframe parameters for the help video to start the video just before Drew starts speaking and ends immediately after he says thank you for watching our video.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<!-- First thing we want them to do is login to the dashboard.  -->
 				<section>
 					<h2>Login here: <a href="https://data.fcps.net" target="_blank">https://data.fcps.net</a></h2>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/isqkpNzqqGg?autoplay=1&enablejsapi=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" data-src="https://www.youtube.com/embed/isqkpNzqqGg?autoplay=1&enablejsapi=0&start=4&end=41" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<aside class="notes">
 						<ul>
 							<li>The video should autoplay, and if not 
