Updated screenshots for managing student groups and added exit slip task.

--- a/index.html
+++ b/index.html
@@ -360,14 +360,32 @@
 
                    <!-- This is the third slide in this set. -->
 					<section>
-						<h3>Managing a Student Group</h3><br> <!-- The slide heading is optional.  Delete this line or comment the entire thing out if not needed. -->
-						<img src="img/studentgroup6.png" style="width: 90%;">		
+						<h3 style="margin-top: -35%;">Managing a Student Group</h3><br> <!-- The slide heading is optional.  Delete this line or comment the entire thing out if not needed. -->
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups1.png" style="width: 90%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups2.png" style="width: 70%; margin-top: -15%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups3.png" style="width: 70%; margin-top: -15%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups4.png" style="width: 90%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups5.png" style="width: 90%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups6.png" style="width: 70%; margin-top: -15%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups7.png" style="width: 70%; margin-top: -15%;">		
+						<img class="fragment step-fade-in-then-out" src="img/managingStudentGroups8.png" style="width: 90%;">		
 						<aside class="notes">
 							<ul>
-								<li>Delete or inactivate group </li>
-								<li>Add or remove students from the group</li>
-								<li>Filter within the group </li>
-								<li>Sharing with user or group</li>								
+								<li>Delete the group by clicking on the trash can.</li>
+								<li>You can edit/modify a group by clicking on the pencil icon</li>
+								<li>Remove existing students by clicking on the green checkmark next to their name.</li>
+								<li>You can add them back by click on the red symbol that appears afterwards</li>
+								<li>You can also add students the way you previously learned.</li>
+								<li>Click on the < looking symbol to share the group</li>
+								<li>Click share with user in order to share with one or more users</li>
+								<li>Here are the permissions:</li>
+								<ul>
+									<li>None = Not shared with this user</li>
+									<li>Read-Only = Users can view/use the group in the dashboard to filter content, but cannot make changes to the group</li>
+									<li>Collaborate = Users get Read-Only permission and are allowed to add/remove students from the group</li>
+								</ul>
+								<li>You get a success message to show you that your changes were applied</li>
+								<li>The visibility column will also update from Private to Shared with Others</li>								
 							</ul>
 						</aside>
 					</section>
@@ -376,16 +394,33 @@
 					<section>
 						<h3>Student Groups Activity</h3><br> <!-- The slide heading is optional.  Delete this line or comment the entire thing out if not needed. -->
 						<ul>
-							<li>In two groups, each member create their own student group and share it with the other members of their small group. </li>
-							<li>Drill down to view student level data.</li>
-							<li>What happens? Do all group members see the same data? Hint: permission. </li>
-							
+							<li>Split into two groups</li>
+							<li>Share the student group you previously created with everyone in your group.</li>
+							<li>Give some members read-only and some collaborate permissions</li>
+							<li>Use the student group as a filter in the dashboard and see how it affects the content</li>							
 						</ul>					
 						<aside class="notes">
 							<ul>
 								<li></li>
 								<li></li>
 								<li></li>
+								<li></li>
+							</ul>
+						</aside>
+					</section>
+
+					<section>
+						<ul>
+							<li>What happens when you drill down into student level data?</li>
+							<li>Does everyone see the same list of students? Why/why not?</li>
+							<li>How could you use this with a PLC at your school?</li>
+							<li>How could you use this with colleagues at other schools?</li>
+						</ul>
+						<aside class="notes">
+							<ul>
+								<li>First question should get them to start experiencing some of the permissioning issues</li>
+								<li>They hopefully will know that they can't see the students due to FERPA</li>
+								<li>Within and between schools it can be used to help track and monitor students who are struggling</li>
 								<li></li>
 							</ul>
 						</aside>
@@ -418,11 +453,11 @@
                 	</section>
 
                 	<section>
-                		<h3>Takeaways</h3>
+                		<h3>Exit Slip</h3>
                 		<ul>
-                			<li></li>
-                			<li></li>
-                			<li></li>
+                			<li>Go to the GRAD Support Portal</li>
+                			<li>Click on Data Central</li>
+                			<li>Submit a ticket suggesting an improvement to this session.</li>
                 		</ul>
                 		<aside class="notes">
 	                		<ul>
