Added remaining question to the group management portion of the slide deck.

--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
 							<li>Split into two groups</li>
 							<li>Share the student group you previously created with everyone in your group.</li>
 							<li>Give some members read-only and some collaborate permissions</li>
+							<li>Try to edit the groups that were just shared with you</li>
 							<li>Use the student group as a filter in the dashboard and see how it affects the content</li>							
 						</ul>					
 						<aside class="notes">
@@ -413,6 +414,7 @@
 						<ul>
 							<li>What happens when you drill down into student level data?</li>
 							<li>Does everyone see the same list of students? Why/why not?</li>
+							<li>Were you able to edit every group shared with you?</li>
 							<li>How could you use this with a PLC at your school?</li>
 							<li>How could you use this with colleagues at other schools?</li>
 						</ul>
