Fixed broken image links for assessment inventory activity. Also fixed issue with text transformation of <h2> and <h3> elements to use the text asis.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
 				opacity: 0;
 				display: none; 
 			}
+
 			.reveal .slides section .fragment.step-fade-in-then-out.current-fragment {
 				opacity: 1;
 				display: inline; 
 			}
+
+			div.imageFragments:first-child {
+				opacity: 1;
+				display: inline;
+			}
+
 		</style>
 
 	</head>
@@ -181,7 +188,7 @@
 						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp2.png" style="width: 100%;">
 						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp3.png" style="width: 100%;">
 						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp4.png" style="width: 100%;">
-						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp5.png" style="width: 100%;">
+						<img class="fragment step-fade-in-then-out" src="img/fcpsHelp5.png" style="width: 100%;">							
 						<aside class="notes">
 							<ul>
 								<li>Click on the Waffle Icon in the top right hand corner.</li>
@@ -216,8 +223,8 @@
 						<h3 style="margin-top: -35%;">Assessment Inventory Activity</h3>
 						<img class="fragment step-fade-in-then-out" src="img/assessmentinventory1.png" style="width: 90%;">				
 						<img class="fragment step-fade-in-then-out" src="img/assessmentinventory2.png" style="width: 90%;">				
-						<img class="fragment step-fade-in-then-out" src="img/assessmentinventory3.png" style="width: 90%;">				
-						<img class="fragment step-fade-in-then-out" src="img/assessmentinventory4.png" style="width: 90%;">				
+						<img class="fragment step-fade-in-then-out" src="img/assessmentInventory3.png" style="width: 90%;">				
+						<img class="fragment step-fade-in-then-out" src="img/assessmentInventory4.png" style="width: 90%;">				
 						<aside class="notes">
 							<ul>
 								<li>With your shoulder partner, we're going to do another activity; this time the activity is about assessment data.</li>
